--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -82,6 +82,8 @@
         margin-bottom: 60px;
     }
     .love-working{
+        padding-left: 10px;
+        padding-right: 10px;
         margin-bottom: 0;
         padding-top: 20px;
         .heading{
@@ -116,6 +118,8 @@
         }
     }
     .our-mission{
+        padding-left: 10px;
+        padding-right: 10px;
         margin-bottom: 100px;
         .col-md-6{
             order: 2;
