--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -60,7 +60,6 @@
                 <a class="btn">Show More</a>
               </div>
           </div>
-          <hr>
           <div class="col-md-4">
             <div class="service" routerLink="/services/interface-design">
                 <div class="service-icon">
@@ -72,7 +71,6 @@
                 <a class="btn">Show More</a>
             </div>
         </div>
-        <hr>
         <div class="col-md-4">
           <div class="service" routerLink="/services/front-end-dev">
             <div class="service-icon">
@@ -85,7 +83,6 @@
             <a class="btn">Show More</a>
           </div>
         </div>
-        <hr>
         </div>
         <div class="row">
            <div class="col-md-4">
@@ -99,7 +96,6 @@
                   <a class="btn">Show More</a>
                 </div>
           </div>
-          <hr>
           <div class="col-md-4">
             <div class="service"  routerLink="/services/usability-testing">
               <div class="service-icon">
@@ -111,16 +107,15 @@
               <a class="btn">Show More</a>
             </div>
       </div>
-      <hr>
           <div class="col-md-4">
-              <div class="service" href="https://uxmint.in/">
+              <div class="service">
                 <div class="service-icon">
                   <img src="/assets/images/services/Group 2770.png" alt="Training"/>
                   <img src="/assets/images/services/Group 3369.png" alt="Training"/>
                 </div>
                 <h4>UX Training</h4>
                 <p>Transform your workforce with cheery picked courses making them business focused and future ready.</p>
-                <a class="btn">Show More</a>
+                <a href="https://uxmint.in/" class="btn">Show More</a>
               </div>
           </div>
         </div>
@@ -132,7 +127,7 @@
 <!-- Solutions -->
 <div class="solutions">
   <div class="solution-heading">
-    <h4>Our <span class="text-primary">solution </span> are helping <span class="text-primary">audience</span></h4>
+    <h4>Our <span class="text-primary">solutions </span> are helping <span class="text-primary">audience</span></h4>
   </div>
   <div class="solution-body">
     <ngu-carousel class="solutions-carousel" #solutionCarousel [inputs]="solutionsCarouselConfig" [dataSource]="solutions">
@@ -181,30 +176,30 @@
     <div class="our-client-body">
         <div class="row">
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo010.png" alt="">
+                  <img src="/assets/images/our-clients/logo010.jpg" alt="">
             </div>
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo020.png" alt="">
+                  <img src="/assets/images/our-clients/logo020.jpg" alt="">
             </div>
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo030.png" alt="">
+                  <img src="/assets/images/our-clients/logo030.jpg" alt="">
             </div>
             <div class="col-sm-3 client">
-                <img src="/assets/images/our-clients/logo040.png" alt="">
+                <img src="/assets/images/our-clients/logo040.jpg" alt="">
           </div>
           </div>
           <div class="row">
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo050.png" alt="">
+                  <img src="/assets/images/our-clients/logo050.jpg" alt="">
             </div>
             <div class="col-sm-3 client1">
-                  <img src="/assets/images/our-clients/logo060.png" alt="">
+                  <img src="/assets/images/our-clients/logo060.jpg" alt="">
             </div>
             <div class="col-sm-3 client">
-                  <img src="/assets/images/our-clients/logo070.png" alt="">
+                  <img src="/assets/images/our-clients/logo070.jpg" alt="">
             </div>
             <div class="col-sm-3 client">
-                <img src="/assets/images/our-clients/logo080.png" alt="">
+                <img src="/assets/images/our-clients/logo080.jpg" alt="">
           </div>
           </div>
     </div>
