--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -333,7 +333,6 @@
               <div class="col-12">
                 <div class="step-image">
                   <img src="/assets/images/projects/networking/nm15.png" alt="Networking"/>
-                  <img src="/assets/images/projects/networking/nm16.png" class="over-img" alt="Networking"/>
               </div>
               </div>
             </div>
@@ -342,9 +341,14 @@
         <div class="layout8">
           <div class="container">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-4">
                 <h2>Responsive Layout</h2>
                   <p></p>
+              </div>
+              <div class="col-md-8">
+                <div class="step-image">
+                <img src="/assets/images/projects/networking/nm16.png" class="over-img" alt="Networking"/>
+              </div>
               </div>
             </div>
             </div>
