--- a/src/app/components/projects/social-review/social-review.component.scss
+++ b/src/app/components/projects/social-review/social-review.component.scss
@@ -284,6 +284,10 @@
         h1{
             font-size: 40px;
         }
+        .step-image img{
+            width: 100%;
+            height: auto;
+        }
     }
 }
 
@@ -307,6 +311,10 @@
             h1{
                 font-size: 40px;
             }
+            .step-image img{
+                width: 100%;
+                height: auto;
+            }
         }
 }
 
@@ -329,6 +337,10 @@
             padding-bottom: 30px;
             h1{
                 font-size: 40px;
+            }
+            .step-image img{
+                width: 100%;
+                height: auto;
             }
         }
 }    
