--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -296,7 +296,7 @@
         }
         .step-image img{
             width: 100%;
-            height: 400px;
+            height: 350px;
         }
     }
     .service-step1{
@@ -349,8 +349,8 @@
             left: 0%;
             margin-bottom: 1px;
             width: 80%;
-            height: 700px;
-            padding-left: 50px;
+            height: auto;
+            padding-left: 60px;
         }  
     }
     .service-step3{
