--- a/src/app/components/our-team/our-team.component.scss
+++ b/src/app/components/our-team/our-team.component.scss
@@ -48,6 +48,10 @@ p{
     margin-bottom: 100px;
 }
 @include media-breakpoint-down(md) {
+    .container{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
     h2{
         font-size: 20px;
     }
@@ -63,7 +67,7 @@ p{
     }
     .step-image img{
         width: 100%;
-        height: 200px;
+        height: auto;
         filter: none;
         -webkit-filter: grayscale(0);
      }
