--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -24,8 +24,9 @@ p{
      background-color: rgb(255, 255, 255); 
     margin-top: 50px;
     .step-image1 img{
-        width: 100%;
-        height: 500px;
+        width: 120%;
+        height: auto;
+        margin-top: 30px;
     }
     .step-image2 img{
         width: 100%;
